# TensorRT-LLM-Inference-Optimization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
benchmark/: __init__.py  latency_test.py  metrics.py  throughput_test.py
config/: engine_config.yaml  model_config.yaml  server_config.yaml
deploy/: configmap.yaml  deployment.yaml  service.yaml
deploy/triton/: config.pbtxt
docker/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml  requirements.txt
engine/: __init__.py  builder.py  engine_utils.py  optimizer.py
models/: __init__.py  gpt2_loader.py  model_utils.py  onnx_exporter.py
scripts/: benchmark.sh  build_engine.sh  run_server.sh  setup_env.sh
server/: __init__.py  api.py  inference.py  middleware.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_engine.py  test_models.py  test_server.py
